--- a/apps/real-world-app/src/index.html
+++ b/apps/real-world-app/src/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>NgrxFileUpload</title>
+    <title>RealWorldApp</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <ngrx-file-upload-root></ngrx-file-upload-root>
+    <real-world-app-root></real-world-app-root>
   </body>
 </html>
